removing blog again

--- a/app/frontend.html
+++ b/app/frontend.html
@@ -476,7 +476,7 @@
                         <!-- Start Network Social Icons -->
                         <ul class="social-network" style="float: right; padding-right: 20px;">
                             <li><a href="http://twitter.com/startupyourcity" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="https://startupcommunity.org/blog" title="Our Blog" target="_blank"><img src="frontend/images/brand/pacman_64.png" style="width:24px; height: 24px; margin: -5px 0 0 2px;opacity: .7;"/></a></li>
+                            <!--<li><a href="https://startupcommunity.org/blog" title="Our Blog" target="_blank"><img src="frontend/images/brand/pacman_64.png" style="width:24px; height: 24px; margin: -5px 0 0 2px;opacity: .7;"/></a></li>-->
                             <li><a href="https://startupcommunity.org/startupcommunity" title="Our Profile" target="_blank"><img src="frontend/images/brand/white_icon_64.png" style="width:24px; height: 24px; margin: -3px 0 0 1px;"/></a></li>
                         </ul>
                         <!-- End Network Social Icons -->
@@ -497,11 +497,11 @@
                         </div>
                     </div>
                     <div class="col-md-3 footer-item">
-                        <!-- Start Subscribe -->
+                       <!--  Start Subscribe
                         <h5 class="title-footer">Learn from us</h5>
                         <p>Subscribe to our monthly newsletter about building a regional startup ecosystem.</p>
                         <a href="https://startupcommunity.org/blog" target="_blank">Click here to visit our blog</a>
-                        <!-- End Subscribe -->
+                         End Subscribe -->
                     </div>
                     <div class="col-md-3 footer-item">
                         <h5 class="title-footer">Contact us</h5>
