--- a/app/app.html
+++ b/app/app.html
@@ -130,6 +130,7 @@
 <!-- endbuild -->
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
+<script src="https://cdn.jsdelivr.net/npm/lodash@4.17.5/lodash.min.js"></script>
 <script src="scripts/misc.js"></script>
 <script src="scripts/app.js"></script>
 <script src="scripts/directives.js"></script>
