--- a/app/app.html
+++ b/app/app.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html ng-app="startupcommunity">
+
 <head>
 
     <meta charset="utf-8">
@@ -30,23 +31,22 @@
     <link rel="stylesheet" href="../build/styles/style.css">
     <!-- endbuild -->
 
-    <script
-            src="https://d2wy8f7a9ursnm.cloudfront.net/bugsnag-2.min.js"
-            data-apikey="a46f2b2ce2b4bcd599be18c86f2fe8ce">
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.5/lodash.min.js"></script>
+    <script src="https://d2wy8f7a9ursnm.cloudfront.net/bugsnag-2.min.js" data-apikey="a46f2b2ce2b4bcd599be18c86f2fe8ce">
     </script>
 
     <script type="text/javascript">
         (function(e, t) {
             function r(e, t) {
                 e[t] = function() {
-                    e.push([ t ].concat(Array.prototype.slice.call(arguments, 0)));
+                    e.push([t].concat(Array.prototype.slice.call(arguments, 0)));
                 };
             }
             var n = "JacoRecorder";
             (function(e, t, i, s) {
                 if (!i.__VERSION) {
                     e[n] = i;
-                    var o = [ "init", "identify", "startRecording", "stopRecording", "removeUserTracking", "setUserInfo" ];
+                    var o = ["init", "identify", "startRecording", "stopRecording", "removeUserTracking", "setUserInfo"];
                     for (var u = 0; u < o.length; u++) r(i, o[u]);
                     i.__VERSION = .9, i.__INIT_TIME = 1 * new Date;
                     var a = t.createElement("script");
@@ -55,20 +55,24 @@
                     f.appendChild(a);
                 }
             })(e, t, e[n] || [], "https://recorder-assets.getjaco.com/recorder.js");
-        }).call(window, window, document), window.JacoRecorder.push([ "init", "54ad6c47-2366-4979-bfdc-c00bd09ab7c7", {} ]);
+        }).call(window, window, document), window.JacoRecorder.push(["init", "54ad6c47-2366-4979-bfdc-c00bd09ab7c7", {}]);
     </script>
 
 </head>
 
 <!-- Body -->
+
 <body class="{{$state.current.data.specialClass}} fixed-navbar">
 
-<!-- Simple splash screen-->
-<div class="splash" id="majorsplash"><div class="bright-line"></div><div class="splash-title"><a href="/"><img src="/public/images/sc_logo.png" style="width: 75%;" alt="StartupCommunity.org Logo"/></a><img src="/public/images/loading-bars.svg" width="64" height="64" /> </div> </div>
-<!--[if lt IE 7]>
+    <!-- Simple splash screen-->
+    <div class="splash" id="majorsplash">
+        <div class="bright-line"></div>
+        <div class="splash-title"><a href="/"><img src="/public/images/sc_logo.png" style="width: 75%;" alt="StartupCommunity.org Logo"/></a><img src="/public/images/loading-bars.svg" width="64" height="64" /> </div>
+    </div>
+    <!--[if lt IE 7]>
 <p class="alert alert-danger">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
-<!--[if lt IE 9]>
+    <!--[if lt IE 9]>
 <script src="excanvas.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/2.2.0/es5-shim.js"></script>
@@ -81,20 +85,26 @@
 <![endif]-->
 
     <!-- Page view wrapper -->
-<div ui-view></div>
+    <div ui-view></div>
 
-<!-- Alternative solution for CORS -->
-<script src="../public/scripts/xdomain.min.js" slave="https://newsletter.startupcommunity.org/proxy.html"></script>
+    <!-- Alternative solution for CORS -->
+    <script src="../public/scripts/xdomain.min.js" slave="https://newsletter.startupcommunity.org/proxy.html"></script>
 
-<script type="text/javascript">
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    <script type="text/javascript">
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-    ga('create', 'UA-58555092-2', 'auto');
-
-</script>
+        ga('create', 'UA-58555092-2', 'auto');
+    </script>
 
 </body>
 
@@ -130,7 +140,6 @@
 <!-- endbuild -->
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
-<script src="https://cdn.jsdelivr.net/npm/lodash@4.17.5/lodash.min.js"></script>
 <script src="scripts/misc.js"></script>
 <script src="scripts/app.js"></script>
 <script src="scripts/directives.js"></script>
@@ -146,4 +155,5 @@
 <!-- endbuild -->
 
 <script src="../public/scripts/source-map.min.js" defer></script>
+
 </html>
