--- a/app/app.html
+++ b/app/app.html
@@ -39,14 +39,26 @@
         (function(e, r) {
             function n(e, r) { e[r] = function() { e.push([r].concat(Array.prototype.slice.call(arguments, 0))) } }
 
-            function o() { var e = r.location.hostname.match(/[a-z0-9][a-z0-9\-]+\.[a-z\.]{2,6}$/i),
+            function o() {
+                var e = r.location.hostname.match(/[a-z0-9][a-z0-9\-]+\.[a-z\.]{2,6}$/i),
                     n = e ? e[0] : null,
                     o = "; domain=." + n + "; path=/; expires=" + new Date(new Date().setFullYear(new Date().getFullYear() + 1)).toUTCString();
-                r.cookie = r.referrer && -1 === r.referrer.indexOf(n) ? "jaco_referer=" + r.referrer + o : "jaco_referer=" + t + o } var a = "JacoRecorder",
-                t = "none";! function(e, r, t, i) { if (!t.__VERSION) { e[a] = t; for (var c = ["init", "identify", "startRecording", "stopRecording", "removeUserTracking", "setUserInfo", "trackEvent"], s = 0; s < c.length; s++) n(t, c[s]);
-                    o(), t.__VERSION = 2.1, t.__INIT_TIME = 1 * new Date; var f = r.createElement("script");
-                    f.async = !0, f.setAttribute("crossorigin", "anonymous"), f.src = i; var d = r.getElementsByTagName("head")[0];
-                    d.appendChild(f) } }(e, r, e[a] || [], "https://recorder-assets.getjaco.com/recorder_v2.js") }).call(window, window, document);
+                r.cookie = r.referrer && -1 === r.referrer.indexOf(n) ? "jaco_referer=" + r.referrer + o : "jaco_referer=" + t + o
+            }
+            var a = "JacoRecorder",
+                t = "none";
+            ! function(e, r, t, i) {
+                if (!t.__VERSION) {
+                    e[a] = t;
+                    for (var c = ["init", "identify", "startRecording", "stopRecording", "removeUserTracking", "setUserInfo", "trackEvent"], s = 0; s < c.length; s++) n(t, c[s]);
+                    o(), t.__VERSION = 2.1, t.__INIT_TIME = 1 * new Date;
+                    var f = r.createElement("script");
+                    f.async = !0, f.setAttribute("crossorigin", "anonymous"), f.src = i;
+                    var d = r.getElementsByTagName("head")[0];
+                    d.appendChild(f)
+                }
+            }(e, r, e[a] || [], "https://recorder-assets.getjaco.com/recorder_v2.js")
+        }).call(window, window, document);
         window.JacoRecorder.init("54ad6c47-2366-4979-bfdc-c00bd09ab7c7");
     </script>
 
@@ -82,21 +94,17 @@
     <!-- Alternative solution for CORS -->
     <script src="../public/scripts/xdomain.min.js" slave="https://newsletter.startupcommunity.org/proxy.html"></script>
 
-    <script type="text/javascript">
-        (function(i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function() {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-58555092-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-        ga('create', 'UA-58555092-2', 'auto');
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-58555092-2');
     </script>
+
 
 </body>
 
