--- a/app/app.html
+++ b/app/app.html
@@ -28,7 +28,6 @@
     <!-- build:css({.tmp,app}) styles/style.css -->
     <link rel="stylesheet" href="fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css" />
     <link rel="stylesheet" href="fonts/pe-icon-7-stroke/css/helper.css" />
-    <link rel="stylesheet" href="../build/styles/style.css">
     <!-- endbuild -->
 
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.5/lodash.min.js"></script>
@@ -71,7 +70,7 @@
     <!-- Simple splash screen-->
     <div class="splash" id="majorsplash">
         <div class="bright-line"></div>
-        <div class="splash-title"><a href="/"><img src="../public/images/sc_logo.png" style="width: 75%;" alt="StartupCommunity.org Logo"/></a><img src="../public/images/loading-bars.svg" width="64" height="64" /> </div>
+        <div class="splash-title"><a href="/"><img src="images/sc_logo.png" style="width: 75%;" alt="StartupCommunity.org Logo"/></a><img src="images/loading-bars.svg" width="64" height="64" /> </div>
     </div>
     <!--[if lt IE 7]>
 <p class="alert alert-danger">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -152,6 +151,6 @@
 <script src="components/newsletter/newsletter.controller.js"></script>
 <!-- endbuild -->
 
-<script src="../public/scripts/source-map.min.js" defer></script>
+<!-- <script src="../public/scripts/source-map.min.js" defer></script> -->
 
 </html>
