--- a/app/app.html
+++ b/app/app.html
@@ -96,9 +96,9 @@
     <!-- Page view wrapper -->
     <div ui-view></div>
 
-    <!-- Alternative solution for CORS -->
+    <!-- Alternative solution for CORS 
     <script src="../public/scripts/xdomain.min.js" slave="https://newsletter.startupcommunity.org/proxy.html"></script>
-
+    -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-58555092-2"></script>
     <script>
