--- a/app/app.html
+++ b/app/app.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="../build/styles/style.css">
     <!-- endbuild -->
 
-    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.5/lodash.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.5/lodash.min.js" crossorigin="anonymous"></script>
     </script>
 
     <!-- RootCause -->
@@ -83,9 +83,9 @@
 <![endif]-->
     <!--[if lt IE 9]>
 <script src="excanvas.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/2.2.0/es5-shim.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Base64/0.3.0/base64.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.js" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/2.2.0/es5-shim.js" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Base64/0.3.0/base64.min.js" crossorigin="anonymous"></script>
 <script>
     document.createElement('ui-select');
     document.createElement('ui-select-match');
@@ -97,10 +97,10 @@
     <div ui-view></div>
 
     <!-- Alternative solution for CORS 
-    <script src="../public/scripts/xdomain.min.js" slave="https://newsletter.startupcommunity.org/proxy.html"></script>
+    <script src="../public/scripts/xdomain.min.js" slave="https://newsletter.startupcommunity.org/proxy.html" crossorigin="anonymous"></script>
     -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-58555092-2"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-58555092-2" crossorigin="anonymous"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
