--- a/app/app.html
+++ b/app/app.html
@@ -2,9 +2,40 @@
 <html ng-app="startupcommunity">
 
 <head>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- RootCause -->
+    <script>
+        var refScript = document.getElementsByTagName("script")[0];
+        var rcScript = document.createElement("script");
+
+        rcScript.async = true;
+        rcScript.crossOrigin = "anonymous";
+        rcScript.src = "https://app.therootcause.io/rootcause-full.js";
+
+        rcScript.addEventListener("load", onRCLoaded);
+        refScript.parentNode.insertBefore(rcScript, refScript);
+
+        function onRCLoaded() {
+            window.logger = window.RC && new RC.Logger({
+                applicationId: "b8c2479f32128e9432fd1e389c97fe1d7392fd70",
+                recordSessionVideo: false,
+                captureScreenshot: true,
+                recordUserActions: true,
+                logConsoleOutput: true,
+                logAjaxRequests: true,
+                treatFailedAjaxAsError: false,
+                logResourceLoadFailures: false,
+                showNotificationOnError: false,
+                showFeedbackButton: true,
+                showErrorDialog: false,
+                maxNbrOfReportedErrors: 1,
+                version: "", // TODO,
+                frameworkVersion: "" // TODO
+            });
+        }
+    </script>
 
     <base href="/">
     <title page-title></title>
@@ -32,38 +63,6 @@
     <!-- endbuild -->
 
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.5/lodash.min.js" crossorigin="anonymous"></script>
-    </script>
-
-    <!-- RootCause -->
-    <script>
-        var refScript = document.getElementsByTagName("script")[0];
-        var rcScript = document.createElement("script");
-
-        rcScript.async = true;
-        rcScript.crossOrigin = "anonymous";
-        rcScript.src = "https://app.therootcause.io/rootcause-full.js";
-
-        rcScript.addEventListener("load", onRCLoaded);
-        refScript.parentNode.insertBefore(rcScript, refScript);
-
-        function onRCLoaded() {
-            window.logger = window.RC && new RC.Logger({
-                applicationId: "b8c2479f32128e9432fd1e389c97fe1d7392fd70",
-                recordSessionVideo: false,
-                captureScreenshot: true,
-                recordUserActions: true,
-                logConsoleOutput: true,
-                logAjaxRequests: true,
-                treatFailedAjaxAsError: false,
-                logResourceLoadFailures: false,
-                showNotificationOnError: false,
-                showFeedbackButton: false,
-                showErrorDialog: false,
-                maxNbrOfReportedErrors: 1,
-                version: "", // TODO,
-                frameworkVersion: "" // TODO
-            });
-        }
     </script>
 
 
