--- a/src/index.html
+++ b/src/index.html
@@ -10,39 +10,86 @@
     <title page-title></title>
     <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&lang=en' rel='stylesheet' type='text/css'>
-
-    <script src="https://cdn.jsdelivr.net/npm/promise-polyfill@7.1.0/dist/promise.min.js"></script>
-
-    <script src="https://d2wy8f7a9ursnm.cloudfront.net/bugsnag-2.min.js" data-apikey="a46f2b2ce2b4bcd599be18c86f2fe8ce">
+    <!--
+    <script src="https://d2wy8f7a9ursnm.cloudfront.net/bugsnag-2.min.js" data-apikey="a46f2b2ce2b4bcd599be18c86f2fe8ce" />
     </script>
+     <script type="text/javascript">
+    (function(e, r) {
+        function n(e, r) { e[r] = function() { e.push([r].concat(Array.prototype.slice.call(arguments, 0))) } }
 
-    <script type="text/javascript">
-        (function(e, r) {
-            function n(e, r) { e[r] = function() { e.push([r].concat(Array.prototype.slice.call(arguments, 0))) } }
-
-            function o() {
-                var e = r.location.hostname.match(/[a-z0-9][a-z0-9\-]+\.[a-z\.]{2,6}$/i),
-                    n = e ? e[0] : null,
-                    o = "; domain=." + n + "; path=/; expires=" + new Date(new Date().setFullYear(new Date().getFullYear() + 1)).toUTCString();
-                r.cookie = r.referrer && -1 === r.referrer.indexOf(n) ? "jaco_referer=" + r.referrer + o : "jaco_referer=" + t + o
+        function o() {
+            var e = r.location.hostname.match(/[a-z0-9][a-z0-9\-]+\.[a-z\.]{2,6}$/i),
+                n = e ? e[0] : null,
+                o = "; domain=." + n + "; path=/; expires=" + new Date(new Date().setFullYear(new Date().getFullYear() + 1)).toUTCString();
+            r.cookie = r.referrer && -1 === r.referrer.indexOf(n) ? "jaco_referer=" + r.referrer + o : "jaco_referer=" + t + o
+        }
+        var a = "JacoRecorder",
+            t = "none";
+        ! function(e, r, t, i) {
+            if (!t.__VERSION) {
+                e[a] = t;
+                for (var c = ["init", "identify", "startRecording", "stopRecording", "removeUserTracking", "setUserInfo", "trackEvent"], s = 0; s < c.length; s++) n(t, c[s]);
+                o(), t.__VERSION = 2.1, t.__INIT_TIME = 1 * new Date;
+                var f = r.createElement("script");
+                f.async = !0, f.setAttribute("crossorigin", "anonymous"), f.src = i;
+                var d = r.getElementsByTagName("head")[0];
+                d.appendChild(f)
             }
-            var a = "JacoRecorder",
-                t = "none";
-            ! function(e, r, t, i) {
-                if (!t.__VERSION) {
-                    e[a] = t;
-                    for (var c = ["init", "identify", "startRecording", "stopRecording", "removeUserTracking", "setUserInfo", "trackEvent"], s = 0; s < c.length; s++) n(t, c[s]);
-                    o(), t.__VERSION = 2.1, t.__INIT_TIME = 1 * new Date;
-                    var f = r.createElement("script");
-                    f.async = !0, f.setAttribute("crossorigin", "anonymous"), f.src = i;
-                    var d = r.getElementsByTagName("head")[0];
-                    d.appendChild(f)
+        }(e, r, e[a] || [], "https://recorder-assets.getjaco.com/recorder_v2.js")
+    }).call(window, window, document);
+    window.JacoRecorder.init("54ad6c47-2366-4979-bfdc-c00bd09ab7c7");
+</script>
+-->
+    <!-- start Mixpanel -->
+    <script type="text/javascript">
+        (function(e, a) {
+            if (!a.__SV) {
+                var b = window;
+                try {
+                    var c, l, i, j = b.location,
+                        g = j.hash;
+                    c = function(a, b) { return (l = a.match(RegExp(b + "=([^&]*)"))) ? l[1] : null };
+                    g && c(g, "state") && (i = JSON.parse(decodeURIComponent(c(g, "state"))), "mpeditor" === i.action && (b.sessionStorage.setItem("_mpcehash", g), history.replaceState(i.desiredHash || "", e.title, j.pathname + j.search)))
                 }
-            }(e, r, e[a] || [], "https://recorder-assets.getjaco.com/recorder_v2.js")
-        }).call(window, window, document);
-        window.JacoRecorder.init("54ad6c47-2366-4979-bfdc-c00bd09ab7c7");
+                catch (m) {}
+                var k, h;
+                window.mixpanel = a;
+                a._i = [];
+                a.init = function(b, c, f) {
+                    function e(b, a) {
+                        var c = a.split(".");
+                        2 == c.length && (b = b[c[0]], a = c[1]);
+                        b[a] = function() {
+                            b.push([a].concat(Array.prototype.slice.call(arguments,
+                                0)))
+                        }
+                    }
+                    var d = a;
+                    "undefined" !== typeof f ? d = a[f] = [] : f = "mixpanel";
+                    d.people = d.people || [];
+                    d.toString = function(b) {
+                        var a = "mixpanel";
+                        "mixpanel" !== f && (a += "." + f);
+                        b || (a += " (stub)");
+                        return a
+                    };
+                    d.people.toString = function() { return d.toString(1) + ".people (stub)" };
+                    k = "disable time_event track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config reset people.set people.set_once people.unset people.increment people.append people.union people.track_charge people.clear_charges people.delete_user".split(" ");
+                    for (h = 0; h < k.length; h++) e(d, k[h]);
+                    a._i.push([b, c, f])
+                };
+                a.__SV = 1.2;
+                b = e.createElement("script");
+                b.type = "text/javascript";
+                b.async = !0;
+                b.src = "undefined" !== typeof MIXPANEL_CUSTOM_LIB_URL ? MIXPANEL_CUSTOM_LIB_URL : "file:" === e.location.protocol && "//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js".match(/^\/\//) ? "https://cdn.mxpnl.com/libs/mixpanel-2-latest.min.js" : "//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";
+                c = e.getElementsByTagName("script")[0];
+                c.parentNode.insertBefore(b, c)
+            }
+        })(document, window.mixpanel || []);
+        mixpanel.init("0f110baeb6150d7e3b8968e32d7a5595");
     </script>
-
+    <!-- end Mixpanel -->
 </head>
 
 <!-- Body -->
@@ -72,8 +119,9 @@
     <!-- Page view wrapper -->
     <div ui-view></div>
 
-    <!-- Alternative solution for CORS -->
+    <!-- Alternative solution for CORS
     <script src="../public/scripts/xdomain.min.js" slave="https://newsletter.startupcommunity.org/proxy.html"></script>
+    -->
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-58555092-2"></script>
@@ -85,10 +133,7 @@
 
         gtag('config', 'UA-58555092-2');
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.5/lodash.min.js"></script>
 </body>
-
-<!-- <script src="../public/scripts/source-map.min.js" defer></script> -->
-
-<!-- <script src="bundle.js"></script> // this is auto-injected by html-webpack-plugin -->
 
 </html>
