--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
     <base href="/">
     <title page-title></title>
-    <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
+    <link rel="shortcut icon" type="image/ico" href="../public/images/favicon.ico" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&lang=en' rel='stylesheet' type='text/css'>
     <!--
     <script src="https://d2wy8f7a9ursnm.cloudfront.net/bugsnag-2.min.js" data-apikey="a46f2b2ce2b4bcd599be18c86f2fe8ce" />
